--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "lint:js": "eslint src --max-warnings=0",
     "lint:css": "stylelint \"src/**/*.css\"",
-    "lint": "npm run lint:js && npm run lint:css"
+    "lint": "npm run lint:js && npm run lint:css",
+    "test": "vitest run"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0"
+    "stylelint-config-standard": "^34.0.0",
+    "vitest": "^1.6.0"
   }
 }
