--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint:js": "eslint src --max-warnings=0",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint": "npm run lint:js && npm run lint:css",
+    "test:unit": "vitest run",
     "test:visual": "playwright test",
-    "test": "npm run lint && npm run test:visual"
+    "test": "npm run lint && npm run test:unit && npm run test:visual"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
