--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "iconv-lite": "^0.6.3",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "dotenv": "^16.4.5"
   }
 }
