--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "http-server": "^14.1.1",
     "iconv-lite": "^0.6.3",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
-    "vitest": "^1.6.0",
-    "dotenv": "^16.4.5"
+    "vitest": "^1.6.0"
+  },
+  "dependencies": {
+    "axe-core": "^4.11.0"
   }
 }
