--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint-plugin-import": "^2.29.1",
     "http-server": "^14.1.1",
     "iconv-lite": "^0.6.3",
-    "jsdom": "^27.0.0",
+    "jsdom": "22.1.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "vitest": "^1.6.0"
