Store options panel baseline as JSON metadata

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 test-results/
 playwright-report/
 tests/visual/report/
+tests/visual/baselines/.artifacts/
 tests/visual/**/*.png
 *.fig
 .env*
