--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:js": "eslint src --max-warnings=0",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint": "npm run lint:axe && npm run lint:js && npm run lint:css",
-    "postinstall": "playwright install",
+    "postinstall": "node scripts/install-playwright-browsers.mjs",
     "test:unit": "vitest run",
     "test:visual": "playwright test",
     "test": "npm run lint && npm run test:unit && npm run test:visual",
