feat: secure activity sync through internal proxy

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint": "npm run lint:manifests && npm run lint:axe && npm run lint:js && npm run lint:css",
     "postinstall": "playwright install",
-    "test:unit": "vitest run",
+    "test:php": "php tests/php/run.php",
+    "test:unit": "npm run test:php && vitest run",
     "test:visual": "playwright test",
     "test": "npm run lint && npm run test:unit && npm run test:visual",
     "demo:stt": "node scripts/integrations/demo-stt.js",
