Add vision model integrations and demos

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:visual": "playwright test",
     "test": "npm run lint && npm run test:unit && npm run test:visual",
     "demo:stt": "node scripts/integrations/demo-stt.js",
+    "demo:vlm": "node scripts/integrations/demo-vlm.js",
     "sync:axe": "node scripts/sync-axe-core.mjs"
   },
   "devDependencies": {
