--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "format": "prettier --write .",
+    "lint:prettier": "prettier --check .",
     "lint:manifests": "node scripts/validate-manifests.mjs",
     "lint:axe": "node scripts/check-axe-core.mjs",
     "lint:js": "eslint src --max-warnings=0",
     "lint:css": "stylelint \"src/**/*.css\"",
-    "lint": "npm run lint:manifests && npm run lint:axe && npm run lint:js && npm run lint:css",
+    "lint": "npm run lint:prettier && npm run lint:manifests && npm run lint:axe && npm run lint:js && npm run lint:css",
     "postinstall": "playwright install",
     "test:php": "php tests/php/run.php",
     "test:unit": "npm run test:php && vitest run",
@@ -28,6 +30,7 @@
     "http-server": "^14.1.1",
     "iconv-lite": "^0.6.3",
     "jsdom": "22.1.0",
+    "prettier": "^3.6.2",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "vitest": "^1.6.0"
