Add Hugging Face LLaVA integration

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ GOOGLE_APPLICATION_CREDENTIALS="./credentials/google-service-account.json"
 OPENAI_VISION_MODEL_KEY="sk-..."
 GEMINI_API_KEY="gai-..."
 ANTHROPIC_API_KEY="anthropic-..."
+HUGGINGFACE_API_TOKEN="hf-..."
